// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Input /> > renders as expected based on provided props 1`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 2`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 3`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 4`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-2 tw:py-1 tw:text-sm tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 5`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 6`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-4 tw:py-2 tw:text-xl tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 7`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring-danger tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-danger tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 8`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-disabled-input tw:dark:bg-dm-disabled-input"
    disabled=""
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 9`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-primary tw:dark:bg-dm-primary tw:group-[&]/card:bg-lm-input tw:group-[&]/card:dark:bg-dm-input"
    readonly=""
  />
</div>
`;

exports[`<Input /> > renders as expected based on provided props 10`] = `
<div>
  <input
    class="tw:w-full tw:focus-ring tw:px-3 tw:py-1.5 tw:rounded-md tw:border tw:border-lm-input-border tw:dark:border-dm-input-border tw:bg-lm-disabled-input tw:dark:bg-dm-disabled-input"
    disabled=""
    readonly=""
  />
</div>
`;
